Split up test methods into individual tests
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/beanutils/trunk@1454884 13f79535-47bb-0310-9956-ffa450edef68